# petitd3d12

./: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt  readme.md
assets/: triangle.frag.dxbc  triangle.vert.dxbc
cmake/: FindFXC.cmake  FindSDL2.cmake  GetAgilitySDK.cmake
src/: CMakeLists.txt  application.cpp  application.h  clock.cpp  clock.h  commandqueue.cpp  commandqueue.h  cube.cpp  cube.h  cubemain.cpp  helpers.h  mesh.cpp  mesh.h  meshmain.cpp  renderer1.cpp  renderer1.h  sdl2main.cpp  window.cpp  window.h
src/shaders/: MeshPixel.hlsl  MeshVertex.hlsl
